GH-3026: spatial index per graph and kryo serialization